src/test/contracts/negative/deep_pattern_matching/pm_fail10.religo
type myd = One(int) | Two(unit)

let t = (x : myd) =>
  switch(x) {
  | One(1) => 2
  | Two    => 1
  }
